Review connections API
Signed-off-by: David Schwilk <david.schwilk@bosch.io>